--- a/tox.ini
+++ b/tox.ini
@@ -15,5 +15,5 @@ commands =
     nosetests {posargs}
 
 [flake8]
-ignore = E128,E501
+ignore = E128,E501,E203,E266,E501,W503
 exclude = moto/packages,dist
